code rework, support Commitlint